note to self: make git use vim instead of nano, since that is what you are used to. second note to self: remember that you just learned about :e :split :vsplit and C-w commands in vim, they seem very useful.
This commit fixes all really huge image sizes, resizing them down to be a percentage of the parent window. This was accomplished in markdown using {:width="33%"} after the image ![]() tag. in order to do this most efficiently (and to brush up on my sed), I used the sed command:

sed -i.bak 's/\(!\[[^(]*\]([^\[]*)\)[^{]/\1{:width="25%"} /g' *.md
this looks for ![stuff](stuff) and makes it into ![stuff](stuff}{:width="25%"}. The basic sed syntax to do that would be
sed 's/\(!\[.*\](.*)\)/\1{:width="25%"}/g'
(note that parentheses need to be escaped in order to capture, whereas brackets need to be escaped in order to be literal)
HOWEVER, as I immediately found out, since sed does greedy matching, I had to add some syntax to make it less greedy. Instead of looking for .* between brackets, it looks for [^(]*, meaning the largest contiguous glob of NON-( characters.
I also make sure to only do matches that don't have the curly braces already, by including a [^{] specifier at the end.

--- a/_posts/2013-04-20-operation-218.md
+++ b/_posts/2013-04-20-operation-218.md
@@ -12,11 +12,11 @@ And then for dinner, we bought catered subway sandwiches.
 
 Like I said, overall, nothing really bad happened; it went pretty well.  The cadet wing commander said I did a good job and gave me a coin:
 
-![afrotc coin](/media/coin-1.jpg)
+![afrotc coin](/media/coin-1.jpg){:width="25%"}
 
 Today, I went to an awards ceremony for Rose-Hulman.  I went to the same ceremony last year, where they gave me a framed certificate for getting a 4.0 during freshman year.  This time, I got a framed certificate AND a medallion thing, because apparently, out of all the people that got 4.0s, I had the highest amount of credit hours.
 
-![bogart](/media/bogart.jpg)
+![bogart](/media/bogart.jpg){:width="25%" :transform="rotate(90deg)"}
 
 Other interesting things that happened:
 
@@ -30,6 +30,6 @@ Since spring break, I’ve gotten back into the habit of studying Japanese.  I s
 
 I’ve been eating a lot of curry recently.   A side effect of this is that I’m getting good at getting the timing right for making good rice in a saucepan.  I don’t have a picture of the curry, but I do have a picture of some fried onions that I used:
 
-![onions](/media/onions.jpg)
+![onions](/media/onions.jpg){:width="25%"}
 
 So that’s pretty much all that happened in the past 2 weeks.
