integrated wordpress posts into blog. regarding the commenting issue, I implemented a simple if statement in liquid syntax that checks to see if post_id (i really ought to change that to issue_id) is defined. If so, it adds a link to the github issues tracker for that post. I then left post_id undefined for all the wordpress imported posts.

--- a/_posts/2010-09-05-new-blog.md
+++ b/_posts/2010-09-05-new-blog.md
@@ -1,8 +1,7 @@
 ---
-layout: wp_post
+layout: post
 title: "Started new blog"
 date: 2010-09-05
-post_id: 1
 ---
 
 So far I’ve only had two days of class, since school started on a Thursday.
