--- a/_posts/2011-10-26-rafting.md
+++ b/_posts/2011-10-26-rafting.md
@@ -1,8 +1,8 @@
 ---
-layout: wp_post
+layout: post
 title: "rafting"
 date: 2011-10-26
-post_id: 5
+
 ---
 In the beginning of this year, I decided to join more clubs, and the club I ended up joining was the outdoor adventure club, which is basically a club that likes to go camping or something every once in a while.  Two weeks ago, we went white-water rafting, which was really fun.  Most of the trip was subsidized by club money, too.  The place we went to was in West Virginia, and it took about 12 hours to get there by car.  We spent two nights at a camping area near the river and then went rafting on Sunday morning.  On saturday, there was this thing called bridge day, which was this thing where people jumped off this really tall bridge with parachutes and float down into the river.  That was fun to watch.
 
