--- a/_posts/2013-04-20-operation-218.md
+++ b/_posts/2013-04-20-operation-218.md
@@ -1,8 +1,8 @@
 ---
-layout: wp_post
+layout: post
 title: "Operation 218 and Awards Ceremony"
 date: 2013-04-20
-post_id: 8
+
 ---
 Last week Saturday, our AFROTC detachment had the Operation 218 event that I was in charge of.  It went pretty well (I don’t have any pictures of it).  In the morning, the younger cadets were in a simulated in-garrison ‘boot camp’ environment, and for part of it they had to make beds and fold clothes.  We needed beds for the cadets to use, so I had to bring mine over in the morning, from my room to the training place, which was around half a mile away.
 
