--- a/_posts/2010-09-16-sep-16.md
+++ b/_posts/2010-09-16-sep-16.md
@@ -1,8 +1,8 @@
 ---
-layout: wp_post
+layout: post
 title: "September 16"
 date: 2010-09-16
-post_id: 2
+
 ---
 
 Right now it’s 4:38 in the morning; I woke up so early because there’s something wrong with my iPod alarm. I have to leave for PT at 5:30 (Mondays, Thursdays, and Fridays), but I don’t want to go back to sleep, because this Monday I did, and I ended up sleeping through the PT session.
