removed dates as they apparently are redundant

--- a/_posts/2023-07-29-samba-lxc.md
+++ b/_posts/2023-07-29-samba-lxc.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Hosting a Samba Server on LXC
+tags: storage samba proxmox linux
 ---
 
 Setting up an SMB server in a Proxmox LXC can be a little tricky if you want to do it the "safe" way in a non-privileged container. I put together some notes on how I set up my instance.
