--- a/_posts/2023-08-06-zfs.md
+++ b/_posts/2023-08-06-zfs.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Failure Recovery on ZFS
+tags: zfs proxmox storage hardware
 ---
 
 Miscellanous log of ZFS issues I have had over the years.
