--- a/_posts/2024-05-27-ffmpeg.md
+++ b/_posts/2024-05-27-ffmpeg.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Bulk editing media metadata using ffmpeg"
+tags: ffmpeg bash 
 ---
 
 I had an issue where I had factory reset my GoPro and forgot to change the datetime before using the camera. The result
